--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,13 +1,15 @@
+@import '../../vars.scss';
 footer {
+  font-family: $kavoon-font;
   .footer-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgba(1, 149, 125, 0.85);
+    background: $footer-background-color;
     padding-block: 0.5rem;
   }
   .footer-text {
-    color: antiquewhite;
+    color: white;
   }
 }
 
@@ -17,11 +19,11 @@ footer {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: rgba(1, 149, 125, 0.85);
+      background: $footer-background-color;
       padding-block: 0.5rem;
     }
     .footer-text {
-      color: antiquewhite;
+      color: white;
     }
   }
 }
