--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -2,28 +2,48 @@
 
 .details-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 3rem;
   padding-block: 2rem;
   .image-container {
     min-height: 295px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     img {
       max-height: 291px;
     }
   }
   .info-container {
-    max-width: 30%;
+    width: 280px;
     h2 {
+      text-align: center;
       font-family: $kavoon-font;
     }
-    p {
-      font-family: $kelly-slab-font;
-      span {
-        font-family: $kavoon-font;
+    .p-container {
+      p {
+        font-family: $kelly-slab-font;
+        text-align: center;
+        span {
+          font-family: $kavoon-font;
+        }
+      }
+    }
+  }
+}
+
+@media (width > 380px) {
+  .details-container {
+    flex-direction: row;
+    justify-content: center;
+    gap: 2rem;
+    .info-container {
+      h2 {
+        text-align: left;
+      }
+      .p-container {
+        p {
+          text-align: left;
+        }
       }
     }
   }
