--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -14,6 +14,9 @@ header {
   }
   .header-buttons-container {
     display: none;
+    button {
+      font-family: $kelly-slab-font;
+    }
   }
 }
 @media (width > 380px) {
