--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -31,7 +31,7 @@
   }
 }
 
-@media (width > 380px) {
+@media (min-width: 380px) {
   .details-container {
     flex-direction: row;
     justify-content: center;
