--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -13,7 +13,7 @@ footer {
   }
 }
 
-@media (width > 430px) {
+@media (min-width: 380px) {
   footer {
     .footer-container {
       display: flex;
