--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,7 +19,7 @@ header {
     }
   }
 }
-@media (width > 380px) {
+@media (min-width: 380px) {
   header {
     .header-container {
       justify-content: space-between;
