--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -11,8 +11,33 @@ header {
     align-items: center;
     padding-inline: 2rem;
     padding-block: 1rem;
+    gap: 2rem;
   }
-  .header-buttons-container {
+  .header-buttons-mobile-container {
+    display: flex;
+    gap: 1rem;
+    .all-chars-button-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 45px;
+      height: 45px;
+      background-color: $button-color;
+      border-radius: 15px;
+    }
+    .favorites-button-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 45px;
+      height: 45px;
+      background-color: $button-color;
+      border-radius: 15px;
+    }
+  }
+  .header-buttons-desktop-container {
     display: none;
     button {
       font-family: $kelly-slab-font;
@@ -25,10 +50,10 @@ header {
       justify-content: space-between;
       gap: 4rem;
     }
-    .hamburguer-logo {
+    .header-buttons-mobile-container {
       display: none;
     }
-    .header-buttons-container {
+    .header-buttons-desktop-container {
       display: flex;
       gap: 2rem;
       button {
